Fix header overflow on very narrow screens

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -32,10 +32,15 @@
   justify-self: left;
 }
 
+.menu {
+  overflow-x: auto ;
+}
+
 .menu ul,
 .nav ul {
   display: grid;
   grid-auto-flow: column;
+  gap: 5px;
 }
 
 .menu ul,
